# chat-fastapi-websockets

./: README.md  pyproject.toml
app/: database.py  exceptions.py  main.py
app/chat/: __init__.py  crud_chat.py  models.py  router.py  schemas.py
app/crud/: base_crud.py
app/migration/: env.py
app/migration/versions/: 0b6dfb784c15_initial_revision.py
app/static/js/: chat.js
app/static/styles/: auth.css  chat.css
app/templates/: chat.html
app/users/: __init__.py  auth.py  crud_users.py  dependencies.py  models.py  router.py  schemas.py
migration/: env.py
