[project]
name = "app-websocket"
version = "0.1.0"
description = ""
authors = [
    {name = "Valdemar",email = "vovateslenko.1996.28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn (==0.31.0)",
    "sqlalchemy (==2.0.35)",
    "alembic (==1.13.3)",
    "pydantic[email] (==2.9.2)",
    "bcrypt (==4.0.1)",
    "passlib (==1.7.4)",
    "python-jose (==3.3.0)",
    "websockets (==13.1)",
    "aiosqlite (==0.20.0)",
    "pydantic-settings (==2.5.2)",
    "jinja2 (==3.1.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
